--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -1,7 +1,7 @@
 body{
     font-size: 20px;
     font-family: monospace;
-    background-color: #d2ffff;
+    background: radial-gradient(ellipse at center, #0b0c2a 0%, #000 100%);
 }
 
 #container{
