--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -17,18 +17,16 @@ body{
     font-size: 1.5em;
     font-weight: bolder;
     word-break: break-all;
-    width: 400px;
-    height: 100px;
-    border: 2px solid lightgrey;
+    width: 300px;
+    height: 40px;
+    border: 2px solid #00e0ff;
+    border-radius: 8px;
     text-align: center;
     cursor: pointer;
     position: absolute;
     left: 300px;
     top: 50px;
     color: #00e0ff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 #start:hover{
     border: 3px solid lightseagreen;
