--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -26,7 +26,7 @@ body{
     position: absolute;
     left: 300px;
     top: 50px;
-    color: #00e0ff;
+    color: black;
 }
 #start:hover{
     border: 3px solid lightseagreen;
