--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -6,10 +6,12 @@ body{
 
 #container{
     margin : 20px auto;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.05);
+    color: white;
     height: 400px;
     width : 900px;
     border-radius: 5px;
+    border-left:3px solid #00e0ff;
     box-shadow: 0px 5px 15px 0px;
     position: relative;
 }
