--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -1,6 +1,6 @@
 body{
     font-size: 20px;
-    font-family: monospace;
+    font-family: 'Orbitron', sans-serif;
     background: radial-gradient(ellipse at center, #0b0c2a 0%, #000 100%);
 }
 
