--- a/Quiz_style.css
+++ b/Quiz_style.css
@@ -6,13 +6,13 @@ body{
 
 #container{
     margin : 20px auto;
+    top: 250px;
     background-color: rgba(255, 255, 255, 0.05);
-    color: white;
     height: 400px;
     width : 900px;
-    border-radius: 5px;
+    border-radius: 8px;
     border-left:3px solid #00e0ff;
-    box-shadow: 0px 5px 15px 0px;
+    box-shadow: -4px 1px 20px 0px white;
     position: relative;
 }
 #start{
@@ -28,7 +28,7 @@ body{
     position: absolute;
     left: 300px;
     top: 50px;
-    color: black;
+    color: white;
 }
 #start:hover{
     border: 3px solid lightseagreen;
@@ -54,6 +54,7 @@ body{
     position: absolute;
     right:0;
     top:0;
+    color:white;
 }
 #question p{
     margin : 0;
@@ -66,7 +67,8 @@ body{
     position: absolute;
     right : 0;
     top : 125px;
-    padding : 10px
+    padding : 10px;
+    color:white;
 }
 .choice{
     display: inline-block;
@@ -88,6 +90,7 @@ body{
     width : 200px;
     bottom : 0px;
     text-align: center;
+    color:white;
 }
 #counter{
     font-size: 3em;
@@ -117,36 +120,31 @@ body{
 .prog{
     width : 25px;
     height : 25px;
-    border: 1px solid #000;
+    border: 1px solid white;
     display: inline-block;
     border-radius: 50%;
     margin-left : 5px;
     margin-right : 5px;
 }
 #scoreContainer{
-    margin : 20px auto;
+    margin: 230px 10px 10px 310px;
     background-color: white;
-    opacity: 0.95;
-    height: 300px;
-    width : 700px;
+    opacity: 0.8;
+    height: 120px;
+    width: 550px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
-    position: relative;
-    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 #scoreContainer img{
-    position: absolute;
-    top:100px;
-    left:325px;
+    margin: 0 auto;
 }
 #scoreContainer p{
-    position: absolute;
-    display: block;
-    width : 59px;
-    height :59px;
-    top:130px;
-    left:325px;
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
+    margin: 0 auto;
+    padding-left: 10px;
 }
